[package]
name = "solana-program-traits"
description = "Essential traits for Solana programs."
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[features]
default = ["legacy"]
legacy = ["dep:solana-program"]

[dependencies]
cfg-if = "1.0.0"
solana-program = { version = "1", optional = true }
